--- a/code-postprocessing/latex-templates/templateBIOBJarticle.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJarticle.tex
@@ -348,25 +348,280 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  
 % Table showing the average running time (aRT in number of function
-% evaluations) to reach the given targets for functions $f_1$--$f_{55}$.
+% evaluations) to reach the given targets for functions $f_1$--$f_{55}$ for dimension 5.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{sidewaystable}
-\vspace*{-1.2cm}
-\rotatebox{90}{
-\centering {\tiny
-\parbox{0.25\textwidth}{\centering
-   %{\small 5-D}\\
-   \input{\bbobdatapath\algfolder pptable_05D_noiselessall}}%
-\parbox{0.25\textwidth}{\centering
-   %{\small 20-D}\\
-   \input{\bbobdatapath\algfolder pptable_20D_noiselessall}}}%
-	\vspace*{-0.4cm}
-}
-\caption[Table of aRTs]{\label{tab:aRTs}\bbobpptablecaption{} 
-}
-\end{sidewaystable}
+\begin{table*}\tiny
+\centering
+\mbox{\begin{minipage}[t]{0.32\textwidth}\tiny
+\centering
+\input{\bbobdatapath\algfolder pptable_f001_05D} 
+
+\input{\bbobdatapath\algfolder pptable_f002_05D}
+
+\input{\bbobdatapath\algfolder pptable_f003_05D}
+
+\input{\bbobdatapath\algfolder pptable_f004_05D}
+
+\input{\bbobdatapath\algfolder pptable_f005_05D}
+
+\input{\bbobdatapath\algfolder pptable_f006_05D}
+
+\input{\bbobdatapath\algfolder pptable_f007_05D}
+
+\input{\bbobdatapath\algfolder pptable_f008_05D}
+
+\input{\bbobdatapath\algfolder pptable_f009_05D}
+
+\input{\bbobdatapath\algfolder pptable_f010_05D}
+
+\input{\bbobdatapath\algfolder pptable_f011_05D}
+
+\input{\bbobdatapath\algfolder pptable_f012_05D}
+
+\input{\bbobdatapath\algfolder pptable_f013_05D}
+
+\input{\bbobdatapath\algfolder pptable_f014_05D}
+
+\input{\bbobdatapath\algfolder pptable_f015_05D}
+
+\input{\bbobdatapath\algfolder pptable_f016_05D}
+
+\input{\bbobdatapath\algfolder pptable_f017_05D}
+
+\input{\bbobdatapath\algfolder pptable_f018_05D}
+
+\input{\bbobdatapath\algfolder pptable_f019_05D}
+
+\end{minipage}
+\hspace{0.002\textwidth}
+\begin{minipage}[t]{0.32\textwidth}\tiny
+\centering
+
+\input{\bbobdatapath\algfolder pptable_f020_05D}
+
+\input{\bbobdatapath\algfolder pptable_f021_05D}
+
+\input{\bbobdatapath\algfolder pptable_f022_05D}
+
+\input{\bbobdatapath\algfolder pptable_f023_05D}
+
+\input{\bbobdatapath\algfolder pptable_f024_05D}
+
+\input{\bbobdatapath\algfolder pptable_f025_05D}
+
+\input{\bbobdatapath\algfolder pptable_f026_05D}
+
+\input{\bbobdatapath\algfolder pptable_f027_05D}
+
+\input{\bbobdatapath\algfolder pptable_f028_05D}
+
+\input{\bbobdatapath\algfolder pptable_f029_05D}
+
+\input{\bbobdatapath\algfolder pptable_f030_05D}
+
+\input{\bbobdatapath\algfolder pptable_f031_05D}
+
+\input{\bbobdatapath\algfolder pptable_f032_05D}
+
+\input{\bbobdatapath\algfolder pptable_f033_05D}
+
+\input{\bbobdatapath\algfolder pptable_f034_05D}
+
+\input{\bbobdatapath\algfolder pptable_f035_05D}
+
+\input{\bbobdatapath\algfolder pptable_f036_05D}
+
+\input{\bbobdatapath\algfolder pptable_f037_05D}
+
+\end{minipage}
+
+\hspace{0.002\textwidth}
+\begin{minipage}[t]{0.32\textwidth}\tiny
+\centering
+
+\input{\bbobdatapath\algfolder pptable_f038_05D}
+
+\input{\bbobdatapath\algfolder pptable_f039_05D}
+
+\input{\bbobdatapath\algfolder pptable_f040_05D}
+
+\input{\bbobdatapath\algfolder pptable_f041_05D}
+
+\input{\bbobdatapath\algfolder pptable_f042_05D}
+
+\input{\bbobdatapath\algfolder pptable_f043_05D}
+
+\input{\bbobdatapath\algfolder pptable_f044_05D}
+
+\input{\bbobdatapath\algfolder pptable_f045_05D}
+
+\input{\bbobdatapath\algfolder pptable_f046_05D}
+
+\input{\bbobdatapath\algfolder pptable_f047_05D}
+
+\input{\bbobdatapath\algfolder pptable_f048_05D}
+
+\input{\bbobdatapath\algfolder pptable_f049_05D}
+
+\input{\bbobdatapath\algfolder pptable_f050_05D}
+
+\input{\bbobdatapath\algfolder pptable_f051_05D}
+
+\input{\bbobdatapath\algfolder pptable_f052_05D}
+
+\input{\bbobdatapath\algfolder pptable_f053_05D}
+
+\input{\bbobdatapath\algfolder pptable_f054_05D}
+
+\input{\bbobdatapath\algfolder pptable_f055_05D}
+
+\end{minipage}}
+
+ \caption[Table of aRTs]{\label{tab:aRTs5}\bbobpptablecaption{dimension $5$}
+ }
+\end{table*}
+%sideways
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% Table showing the average running time (aRT in number of function
+% evaluations) to reach the given targets for functions $f_1$--$f_{55}$ for dimension 5.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{table*}\tiny
+\centering
+\mbox{\begin{minipage}[t]{0.32\textwidth}\tiny
+\centering
+\input{\bbobdatapath\algfolder pptable_f001_20D} 
+
+\input{\bbobdatapath\algfolder pptable_f002_20D}
+
+\input{\bbobdatapath\algfolder pptable_f003_20D}
+
+\input{\bbobdatapath\algfolder pptable_f004_20D}
+
+\input{\bbobdatapath\algfolder pptable_f005_20D}
+
+\input{\bbobdatapath\algfolder pptable_f006_20D}
+
+\input{\bbobdatapath\algfolder pptable_f007_20D}
+
+\input{\bbobdatapath\algfolder pptable_f008_20D}
+
+\input{\bbobdatapath\algfolder pptable_f009_20D}
+
+\input{\bbobdatapath\algfolder pptable_f010_20D}
+
+\input{\bbobdatapath\algfolder pptable_f011_20D}
+
+\input{\bbobdatapath\algfolder pptable_f012_20D}
+
+\input{\bbobdatapath\algfolder pptable_f013_20D}
+
+\input{\bbobdatapath\algfolder pptable_f014_20D}
+
+\input{\bbobdatapath\algfolder pptable_f015_20D}
+
+\input{\bbobdatapath\algfolder pptable_f016_20D}
+
+\input{\bbobdatapath\algfolder pptable_f017_20D}
+
+\input{\bbobdatapath\algfolder pptable_f018_20D}
+
+\input{\bbobdatapath\algfolder pptable_f019_20D}
+
+\end{minipage}
+\hspace{0.002\textwidth}
+\begin{minipage}[t]{0.32\textwidth}\tiny
+\centering
+
+\input{\bbobdatapath\algfolder pptable_f020_20D}
+
+\input{\bbobdatapath\algfolder pptable_f021_20D}
+
+\input{\bbobdatapath\algfolder pptable_f022_20D}
+
+\input{\bbobdatapath\algfolder pptable_f023_20D}
+
+\input{\bbobdatapath\algfolder pptable_f024_20D}
+
+\input{\bbobdatapath\algfolder pptable_f025_20D}
+
+\input{\bbobdatapath\algfolder pptable_f026_20D}
+
+\input{\bbobdatapath\algfolder pptable_f027_20D}
+
+\input{\bbobdatapath\algfolder pptable_f028_20D}
+
+\input{\bbobdatapath\algfolder pptable_f029_20D}
+
+\input{\bbobdatapath\algfolder pptable_f030_20D}
+
+\input{\bbobdatapath\algfolder pptable_f031_20D}
+
+\input{\bbobdatapath\algfolder pptable_f032_20D}
+
+\input{\bbobdatapath\algfolder pptable_f033_20D}
+
+\input{\bbobdatapath\algfolder pptable_f034_20D}
+
+\input{\bbobdatapath\algfolder pptable_f035_20D}
+
+\input{\bbobdatapath\algfolder pptable_f036_20D}
+
+\input{\bbobdatapath\algfolder pptable_f037_20D}
+
+\end{minipage}
+
+\hspace{0.002\textwidth}
+\begin{minipage}[t]{0.32\textwidth}\tiny
+\centering
+
+\input{\bbobdatapath\algfolder pptable_f038_20D}
+
+\input{\bbobdatapath\algfolder pptable_f039_20D}
+
+\input{\bbobdatapath\algfolder pptable_f040_20D}
+
+\input{\bbobdatapath\algfolder pptable_f041_20D}
+
+\input{\bbobdatapath\algfolder pptable_f042_20D}
+
+\input{\bbobdatapath\algfolder pptable_f043_20D}
+
+\input{\bbobdatapath\algfolder pptable_f044_20D}
+
+\input{\bbobdatapath\algfolder pptable_f045_20D}
+
+\input{\bbobdatapath\algfolder pptable_f046_20D}
+
+\input{\bbobdatapath\algfolder pptable_f047_20D}
+
+\input{\bbobdatapath\algfolder pptable_f048_20D}
+
+\input{\bbobdatapath\algfolder pptable_f049_20D}
+
+\input{\bbobdatapath\algfolder pptable_f050_20D}
+
+\input{\bbobdatapath\algfolder pptable_f051_20D}
+
+\input{\bbobdatapath\algfolder pptable_f052_20D}
+
+\input{\bbobdatapath\algfolder pptable_f053_20D}
+
+\input{\bbobdatapath\algfolder pptable_f054_20D}
+
+\input{\bbobdatapath\algfolder pptable_f055_20D}
+
+\end{minipage}}
+
+ \caption[Table of aRTs]{\label{tab:aRTs20}\bbobpptablecaption{dimension $20$}
+ }
+\end{table*}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\section{Discussion}  % and/or conclusions etc
