Added pptable_header_xxD.tex files.

--- a/code-postprocessing/latex-templates/templateBBOBarticle.tex
+++ b/code-postprocessing/latex-templates/templateBBOBarticle.tex
@@ -249,6 +249,8 @@ Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016
 }
 \mbox{\begin{minipage}[t]{0.499\textwidth}\tiny
 \centering
+\input{\bbobdatapath\algfolder pptable_header_05D} 
+
 \input{\bbobdatapath\algfolder pptable_f001_05D} 
 
 \input{\bbobdatapath\algfolder pptable_f002_05D}
@@ -277,6 +279,8 @@ Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016
 \hspace{0.002\textwidth}
 \begin{minipage}[t]{0.499\textwidth}\tiny
 \centering
+\input{\bbobdatapath\algfolder pptable_header_05D} 
+
 \input{\bbobdatapath\algfolder pptable_f013_05D}
 
 \input{\bbobdatapath\algfolder pptable_f014_05D}
@@ -319,6 +323,8 @@ Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016
 %\hfill20-D\hfill~\\[1ex]
 \mbox{\begin{minipage}[t]{0.499\textwidth}\tiny
 \centering
+\input{\bbobdatapath\algfolder pptable_header_20D} 
+
 \input{\bbobdatapath\algfolder pptable_f001_20D} 
 
 \input{\bbobdatapath\algfolder pptable_f002_20D}
@@ -346,6 +352,8 @@ Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016
 \hspace{0.002\textwidth}
 \begin{minipage}[t]{0.499\textwidth}\tiny
 \centering
+\input{\bbobdatapath\algfolder pptable_header_20D} 
+
 \input{\bbobdatapath\algfolder pptable_f013_20D}
 
 \input{\bbobdatapath\algfolder pptable_f014_20D}
