--- a/code-postprocessing/latex-templates/templateBIOBJarticle.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJarticle.tex
@@ -356,6 +356,8 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 \centering
 \mbox{\begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
+\input{\bbobdatapath\algfolder pptable_header_05D} 
+
 \input{\bbobdatapath\algfolder pptable_f001_05D} 
 
 \input{\bbobdatapath\algfolder pptable_f002_05D}
@@ -399,6 +401,8 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 \begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
 
+\input{\bbobdatapath\algfolder pptable_header_05D} 
+
 \input{\bbobdatapath\algfolder pptable_f020_05D}
 
 \input{\bbobdatapath\algfolder pptable_f021_05D}
@@ -440,6 +444,8 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 \hspace{0.002\textwidth}
 \begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
+
+\input{\bbobdatapath\algfolder pptable_header_05D} 
 
 \input{\bbobdatapath\algfolder pptable_f038_05D}
 
@@ -496,6 +502,8 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 \centering
 \mbox{\begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
+\input{\bbobdatapath\algfolder pptable_header_20D} 
+
 \input{\bbobdatapath\algfolder pptable_f001_20D} 
 
 \input{\bbobdatapath\algfolder pptable_f002_20D}
@@ -539,6 +547,8 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 \begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
 
+\input{\bbobdatapath\algfolder pptable_header_20D} 
+
 \input{\bbobdatapath\algfolder pptable_f020_20D}
 
 \input{\bbobdatapath\algfolder pptable_f021_20D}
@@ -580,6 +590,8 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 \hspace{0.002\textwidth}
 \begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
+
+\input{\bbobdatapath\algfolder pptable_header_20D} 
 
 \input{\bbobdatapath\algfolder pptable_f038_20D}
 
