Fixing the appearance of the tables in latex templates.

--- a/code-postprocessing/latex-templates/templateBBOBarticle.tex
+++ b/code-postprocessing/latex-templates/templateBBOBarticle.tex
@@ -249,7 +249,7 @@ Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016
 }
 \mbox{\begin{minipage}[t]{0.499\textwidth}\tiny
 \centering
-\input{\bbobdatapath\algfolder pptable_header_05D} 
+\pptableheader 
 
 \input{\bbobdatapath\algfolder pptable_f001_05D} 
 
@@ -275,11 +275,14 @@ Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016
 
 \input{\bbobdatapath\algfolder pptable_f012_05D}
 
+\pptablefooter
+
 \end{minipage}
 \hspace{0.002\textwidth}
 \begin{minipage}[t]{0.499\textwidth}\tiny
 \centering
-\input{\bbobdatapath\algfolder pptable_header_05D} 
+
+\pptableheader 
 
 \input{\bbobdatapath\algfolder pptable_f013_05D}
 
@@ -304,6 +307,9 @@ Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016
 \input{\bbobdatapath\algfolder pptable_f023_05D}
 
 \input{\bbobdatapath\algfolder pptable_f024_05D}
+
+\pptablefooter
+
 \end{minipage}}
 
 \caption[Table of aRTs]{\label{tab:aRTs5}\bbobpptablecaption{dimension $5$}
@@ -323,7 +329,7 @@ Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016
 %\hfill20-D\hfill~\\[1ex]
 \mbox{\begin{minipage}[t]{0.499\textwidth}\tiny
 \centering
-\input{\bbobdatapath\algfolder pptable_header_20D} 
+\pptableheader 
 
 \input{\bbobdatapath\algfolder pptable_f001_20D} 
 
@@ -348,11 +354,14 @@ Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016
 \input{\bbobdatapath\algfolder pptable_f011_20D}
 
 \input{\bbobdatapath\algfolder pptable_f012_20D}
+
+\pptablefooter
+
 \end{minipage}
 \hspace{0.002\textwidth}
 \begin{minipage}[t]{0.499\textwidth}\tiny
 \centering
-\input{\bbobdatapath\algfolder pptable_header_20D} 
+\pptableheader 
 
 \input{\bbobdatapath\algfolder pptable_f013_20D}
 
@@ -377,6 +386,9 @@ Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016
 \input{\bbobdatapath\algfolder pptable_f023_20D}
 
 \input{\bbobdatapath\algfolder pptable_f024_20D}
+
+\pptablefooter
+
 \end{minipage}}
  
 \caption[Table of aRTs]{\label{tab:aRTs20}\bbobpptablecaption{dimension $20$}
