--- a/code-postprocessing/latex-templates/templateBIOBJarticle.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJarticle.tex
@@ -356,7 +356,7 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 \centering
 \mbox{\begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
-\input{\bbobdatapath\algfolder pptable_header_05D} 
+\pptableheader 
 
 \input{\bbobdatapath\algfolder pptable_f001_05D} 
 
@@ -396,12 +396,14 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 \input{\bbobdatapath\algfolder pptable_f019_05D}
 
+\pptablefooter
+
 \end{minipage}
 \hspace{0.002\textwidth}
 \begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
 
-\input{\bbobdatapath\algfolder pptable_header_05D} 
+\pptableheader 
 
 \input{\bbobdatapath\algfolder pptable_f020_05D}
 
@@ -439,13 +441,15 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 \input{\bbobdatapath\algfolder pptable_f037_05D}
 
+\pptablefooter
+
 \end{minipage}
 
 \hspace{0.002\textwidth}
 \begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
 
-\input{\bbobdatapath\algfolder pptable_header_05D} 
+\pptableheader 
 
 \input{\bbobdatapath\algfolder pptable_f038_05D}
 
@@ -483,6 +487,8 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 \input{\bbobdatapath\algfolder pptable_f055_05D}
 
+\pptablefooter
+
 \end{minipage}}
 
  \caption[Table of aRTs]{\label{tab:aRTs5}\bbobpptablecaption{dimension $5$}
@@ -502,7 +508,7 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 \centering
 \mbox{\begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
-\input{\bbobdatapath\algfolder pptable_header_20D} 
+\pptableheader 
 
 \input{\bbobdatapath\algfolder pptable_f001_20D} 
 
@@ -542,12 +548,14 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 \input{\bbobdatapath\algfolder pptable_f019_20D}
 
+\pptablefooter
+
 \end{minipage}
 \hspace{0.002\textwidth}
 \begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
 
-\input{\bbobdatapath\algfolder pptable_header_20D} 
+\pptableheader 
 
 \input{\bbobdatapath\algfolder pptable_f020_20D}
 
@@ -585,13 +593,15 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 \input{\bbobdatapath\algfolder pptable_f037_20D}
 
+\pptablefooter
+
 \end{minipage}
 
 \hspace{0.002\textwidth}
 \begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
 
-\input{\bbobdatapath\algfolder pptable_header_20D} 
+\pptableheader 
 
 \input{\bbobdatapath\algfolder pptable_f038_20D}
 
@@ -628,6 +638,8 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 \input{\bbobdatapath\algfolder pptable_f054_20D}
 
 \input{\bbobdatapath\algfolder pptable_f055_20D}
+
+\pptablefooter
 
 \end{minipage}}
 
