Updated the text under the tables.

--- a/code-postprocessing/latex-templates/templateBBOBcmp.tex
+++ b/code-postprocessing/latex-templates/templateBBOBcmp.tex
@@ -416,7 +416,7 @@ of overall function evaluations for any unsuccessful trial under consideration.
 \input{\bbobdatapath pptable2_05D_noiselessall}\hfill%
 \input{\bbobdatapath pptable2_20D_noiselessall}}
 \caption{\label{tab:aRTs}
-\bbobpptablestwolegend{48}
+\bbobpptablestwolegend{dimensions $5$ (left) and $20$ (right)}{48}
 }
 \end{table*}
 
