Changes the creation pptables.

--- a/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
@@ -408,6 +408,9 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 \centering
 \mbox{\begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
+
+\pptablesheader
+
 \input{\bbobdatapath pptables_f001_05D} 
 
 \input{\bbobdatapath pptables_f002_05D}
@@ -446,10 +449,14 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 \input{\bbobdatapath pptables_f019_05D}
 
+\end{tabularx}
+
 \end{minipage}
 \hspace{0.002\textwidth}
 \begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
+
+\pptablesheader
 
 \input{\bbobdatapath pptables_f020_05D}
 
@@ -487,11 +494,15 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 \input{\bbobdatapath pptables_f037_05D}
 
+\end{tabularx}
+
 \end{minipage}
 
 \hspace{0.002\textwidth}
 \begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
+
+\pptablesheader
 
 \input{\bbobdatapath pptables_f038_05D}
 
@@ -529,6 +540,8 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 \input{\bbobdatapath pptables_f055_05D}
 
+\end{tabularx}
+
 \end{minipage}}
 
  \caption{\label{tab:aRTs5}
@@ -549,6 +562,9 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 \centering
 \mbox{\begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
+
+\pptablesheader
+
 \input{\bbobdatapath pptables_f001_20D} 
 
 \input{\bbobdatapath pptables_f002_20D}
@@ -587,10 +603,14 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 \input{\bbobdatapath pptables_f019_20D}
 
+\end{tabularx}
+
 \end{minipage}
 \hspace{0.002\textwidth}
 \begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
+
+\pptablesheader
 
 \input{\bbobdatapath pptables_f020_20D}
 
@@ -628,11 +648,15 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 \input{\bbobdatapath pptables_f037_20D}
 
+\end{tabularx}
+
 \end{minipage}
 
 \hspace{0.002\textwidth}
 \begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
+
+\pptablesheader
 
 \input{\bbobdatapath pptables_f038_20D}
 
@@ -669,6 +693,8 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 \input{\bbobdatapath pptables_f054_20D}
 
 \input{\bbobdatapath pptables_f055_20D}
+
+\end{tabularx}
 
 \end{minipage}}
 
