--- a/code-postprocessing/latex-templates/templateBBOBmany.tex
+++ b/code-postprocessing/latex-templates/templateBBOBmany.tex
@@ -369,6 +369,7 @@ ill-conditioned fcts & multi-modal fcts \\
 }
 \mbox{\begin{minipage}[t]{0.499\textwidth}\tiny
 \centering
+\pptablesheader
 \input{\bbobdatapath pptables_f001_05D} 
 
 \input{\bbobdatapath pptables_f002_05D}
@@ -392,11 +393,13 @@ ill-conditioned fcts & multi-modal fcts \\
 \input{\bbobdatapath pptables_f011_05D}
 
 \input{\bbobdatapath pptables_f012_05D}
+\end{tabularx}
 
 \end{minipage}
 \hspace{0.002\textwidth}
 \begin{minipage}[t]{0.499\textwidth}\tiny
 \centering
+\pptablesheader
 \input{\bbobdatapath pptables_f013_05D}
 
 \input{\bbobdatapath pptables_f014_05D}
@@ -420,6 +423,7 @@ ill-conditioned fcts & multi-modal fcts \\
 \input{\bbobdatapath pptables_f023_05D}
 
 \input{\bbobdatapath pptables_f024_05D}
+\end{tabularx}
 \end{minipage}}
 
  \caption{\label{tab:aRTs5}
@@ -440,6 +444,7 @@ ill-conditioned fcts & multi-modal fcts \\
 %\hfill20-D\hfill~\\[1ex]
 \mbox{\begin{minipage}[t]{0.499\textwidth}\tiny
 \centering
+\pptablesheader
 \input{\bbobdatapath pptables_f001_20D} 
 
 \input{\bbobdatapath pptables_f002_20D}
@@ -463,10 +468,12 @@ ill-conditioned fcts & multi-modal fcts \\
 \input{\bbobdatapath pptables_f011_20D}
 
 \input{\bbobdatapath pptables_f012_20D}
+\end{tabularx}
 \end{minipage}
 \hspace{0.002\textwidth}
 \begin{minipage}[t]{0.499\textwidth}\tiny
 \centering
+\pptablesheader
 \input{\bbobdatapath pptables_f013_20D}
 
 \input{\bbobdatapath pptables_f014_20D}
@@ -490,6 +497,7 @@ ill-conditioned fcts & multi-modal fcts \\
 \input{\bbobdatapath pptables_f023_20D}
 
 \input{\bbobdatapath pptables_f024_20D}
+\end{tabularx}
 \end{minipage}}
  \caption{\label{tab:aRTs20}
   \bbobpptablesmanylegend{dimension $20$}{110} % Bonferroni correction: #dimensions * #functions
