first version of noisy template for all numbers of algorithms (not yet fitting to the most recent change in the postprocessing tables!!!)

--- a/code-postprocessing/latex-templates/bbob.bib
+++ b/code-postprocessing/latex-templates/bbob.bib
@@ -1651,7 +1651,10 @@
   booktitle = {Proceedings of the {IEEE} International Congress on Evolutionary
 	Computation},
   year = {1997},
-  pages = {153--157}
+  pages = {153--157},
+	publisher = {IEEE},
+	address = {Piscataway, NJ, USA},
+	doi={10.1109/ICEC.1997.592287}
 }
 
 @MISC{Pal:2009,
